--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@azure/msal-browser": "^3.17.0",
     "@azure/msal-react": "^2.0.19",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@tabler/icons-react": "^3.6.0",
