--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@azure/msal-browser": "^3.17.0",
     "@azure/msal-react": "^2.0.19",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@mui/material": "^5.15.20",
     "@tabler/icons-react": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
