--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -13,6 +13,8 @@
     "@azure/msal-react": "^2.0.19",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@tabler/icons-react": "^3.6.0",
+    "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
