--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -19,6 +19,7 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.1",
     "@tabler/icons-react": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
