--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
     "@tabler/icons-react": "^3.6.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
