--- a/src/website/highlights/.vscode/settings.json
+++ b/src/website/highlights/.vscode/settings.json
@@ -5,5 +5,9 @@
         "**/*.sass",
         "**/*.less",
         "node_modules/@mantine/core/styles.css"
-    ]
+    ],
+    "editor.formatOnSave": true,
+    "git.autofetch": true,
+    "git.suggestSmartCommit": false,
+    "git.confirmSync": false,
 }
