Update recommended extensions

--- a/src/website/highlights/.vscode/extensions.json
+++ b/src/website/highlights/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
     "recommendations": [
-        "vunguyentuan.vscode-css-variables"
+        "vunguyentuan.vscode-css-variables",
+        "wso2.ballerina",
+        "be5invis.toml",
+        "mhutchie.git-graph"
     ]
 }
