--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -16,11 +16,13 @@
     "@tabler/icons-react": "^3.6.0",
     "clsx": "^2.1.1",
     "next": "14.2.3",
+    "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
