--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^7.7.1",
     "@tabler/icons-react": "^3.6.0",
     "dayjs": "^1.11.11",
+    "inquirer": "^9.2.23",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
