change the popup

--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -20,6 +20,7 @@
     "@mantine/hooks": "^7.10.1",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
+    "@mui/x-date-pickers-pro": "^7.8.0",
     "@tabler/icons-react": "^3.6.0",
     "dayjs": "^1.11.11",
     "inquirer": "^9.2.23",
