--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
     "@mui/x-date-pickers-pro": "^7.8.0",
@@ -26,7 +27,8 @@
     "inquirer": "^9.2.23",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
