--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -18,7 +18,9 @@
     "next": "14.2.3",
     "qs": "^6.12.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "^18",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
