--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-snowfall": "^2.1.0",
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
