--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.3",
     "qs": "^6.12.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-resizable": "^3.0.5",
