--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^20",
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@types/react-resizable": "^3.0.7",
     "eslint": "^8",
