Add mantine dates

--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -11,10 +11,12 @@
     "dependencies": {
         "@azure/msal-browser": "^3.17.0",
         "@azure/msal-react": "^2.0.19",
-        "@mantine/core": "^7.11.0",
-        "@mantine/hooks": "^7.11.0",
+        "@mantine/core": "^7.11.1",
+        "@mantine/dates": "^7.11.1",
+        "@mantine/hooks": "^7.11.1",
         "@tabler/icons-react": "^3.7.0",
         "clsx": "^2.1.1",
+        "dayjs": "^1.11.11",
         "next": "14.2.3",
         "qs": "^6.12.1",
         "react": "^18",
