--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -17,8 +17,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mantine/core": "^7.10.1",
-    "@mantine/hooks": "^7.10.1",
+    "@mantine/core": "^7.11.1",
+    "@mantine/dates": "^7.11.1",
+    "@mantine/form": "^7.11.1",
+    "@mantine/hooks": "^7.11.1",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
