--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "@azure/msal-browser": "^3.17.0",
     "@azure/msal-react": "^2.0.19",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.11.0",
     "@mantine/hooks": "^7.10.1",
-    "@tabler/icons-react": "^3.6.0",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.8.0",
+    "@tabler/icons-react": "^3.7.0",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
