--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -34,7 +34,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-snowfall": "^2.1.0",
-    "sweetalert2": "^11.12.1"
+    "sweetalert2": "^11.12.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
