--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -26,10 +26,10 @@
     "@mui/x-date-pickers": "^7.7.1",
     "@mui/x-date-pickers-pro": "^7.8.0",
     "@tabler/icons-react": "^3.6.0",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "inquirer": "^9.2.23",
     "next": "14.2.3",
-    "qs": "^6.12.2",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
@@ -39,7 +39,6 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
