--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.7.1",
     "@mui/x-date-pickers-pro": "^7.8.0",
+    "@tabler/icons": "^3.9.0",
     "@tabler/icons-react": "^3.6.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
