--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -22,6 +22,7 @@
     "@mantine/hooks": "^7.11.1",
     "@mantine/notifications": "^7.11.1",
     "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.6",
     "@tabler/icons-react": "^3.6.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
@@ -30,6 +31,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
+    "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "recoil": "^0.7.7",
     "sweetalert2": "^11.12.1",
