--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -24,6 +24,9 @@
     "@mui/material": "^5.15.20",
     "@tabler/icons-react": "^3.6.0",
     "axios": "^1.7.2",
+    "@mui/icons-material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.8.0",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
