--- a/src/landingpage/package.json
+++ b/src/landingpage/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "run": "^1.5.0",
     "saas": "^1.0.0"
   },
   "devDependencies": {
