--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -31,6 +31,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-resizable": "^3.0.5",
+    "run": "^1.5.0",
     "sweetalert2": "^11.12.1",
     "swr": "^2.2.5"
   },
