Add task lists support. Get task lists from DB. View each task list

--- a/src/database/compose.dev.yml
+++ b/src/database/compose.dev.yml
@@ -9,3 +9,4 @@ services:
       - "3306:3306"
     volumes:
       - ./scripts/create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql
+      - ./scripts/seed-data.sql:/docker-entrypoint-initdb.d/seed-data.sql
