--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -29,10 +29,11 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "recharts": "^2.12.7",
