--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "recharts": "^2.12.7",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.12.1",
     "swr": "^2.2.5"
   },
