--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@azure/msal-browser": "^3.17.0",
     "@azure/msal-react": "^2.0.19",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -25,8 +25,6 @@
     "@mantine/notifications": "^7.11.1",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
-    "@mui/x-date-pickers-pro": "^7.8.0",
-    "@tabler/icons": "^3.9.0",
     "@mui/x-date-pickers": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.11.0",
@@ -34,14 +32,16 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "next": "14.2.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.1",
+    "sweetalert2-react-content": "^5.0.7",
     "swr": "^2.2.5"
   },
   "devDependencies": {
