--- a/src/landingpage/package.json
+++ b/src/landingpage/package.json
@@ -26,6 +26,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "sass": "^1.77.6",
-    "typescript": "5.5.4"
+    "typescript": "^5"
   }
 }
