--- a/src/api/Ballerina.toml
+++ b/src/api/Ballerina.toml
@@ -6,3 +6,9 @@ distribution = "2201.9.0"
 
 [build-options]
 observabilityIncluded = true
+
+[[platform.java17.dependency]]
+groupId = "io.ballerina.stdlib"
+artifactId = "persist.sql-native"
+version = "1.3.0"
+
