--- a/src/api/Dependencies.toml
+++ b/src/api/Dependencies.toml
@@ -14,20 +14,25 @@ version = "0.1.0"
 dependencies = [
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.string"},
 	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "persist"},
 	{org = "ballerina", name = "sql"},
 	{org = "ballerina", name = "test"},
 	{org = "ballerina", name = "time"},
 	{org = "ballerinai", name = "observe"},
 	{org = "ballerinax", name = "mysql"},
-	{org = "ballerinax", name = "mysql.driver"}
+	{org = "ballerinax", name = "mysql.driver"},
+	{org = "ballerinax", name = "persist.sql"}
 ]
 modules = [
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend"},
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.database"},
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.http_listener"},
-	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.lists"}
+	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.lists"},
+	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.storage"},
+	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.users"}
 ]
 
 [[package]]
@@ -129,6 +134,9 @@ modules = [
 org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
+modules = [
+	{org = "ballerina", packageName = "jballerina.java", moduleName = "jballerina.java"}
+]
 
 [[package]]
 org = "ballerina"
@@ -286,6 +294,17 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
+name = "persist"
+version = "1.3.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"}
+]
+modules = [
+	{org = "ballerina", packageName = "persist", moduleName = "persist"}
+]
+
+[[package]]
+org = "ballerina"
 name = "sql"
 version = "1.13.2"
 dependencies = [
@@ -373,5 +392,20 @@ name = "mysql.driver"
 version = "1.6.0"
 modules = [
 	{org = "ballerinax", packageName = "mysql.driver", moduleName = "mysql.driver"}
+]
+
+[[package]]
+org = "ballerinax"
+name = "persist.sql"
+version = "1.3.0"
+dependencies = [
+	{org = "ballerina", name = "jballerina.java"},
+	{org = "ballerina", name = "log"},
+	{org = "ballerina", name = "persist"},
+	{org = "ballerina", name = "sql"},
+	{org = "ballerina", name = "time"}
+]
+modules = [
+	{org = "ballerinax", packageName = "persist.sql", moduleName = "persist.sql"}
 ]
 
