--- a/src/api/Ballerina.toml
+++ b/src/api/Ballerina.toml
@@ -7,9 +7,14 @@ distribution = "2201.9.0"
 [build-options]
 observabilityIncluded = true
 
+[[tool.persist]]
+id = "generate-db-client"
+targetModule = "webapp.backend.storage"
+options.datastore = "mysql"
+filePath = "persist/model.bal"
+
 [[platform.java17.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "persist.sql-native"
 version = "1.3.0"
-
 
