--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,6 +23,7 @@
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
     "@mantine/notifications": "^7.11.1",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.8.0",
@@ -46,6 +47,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.40.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
