--- a/src/api/Dependencies.toml
+++ b/src/api/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.9.2"
+distribution-version = "2201.9.1"
 
 [[package]]
 org = "ashen"
@@ -27,13 +27,14 @@ modules = [
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend"},
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.database"},
 	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.http_listener"},
-	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.lists"}
+	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.lists"},
+	{org = "ashen", packageName = "webapp.backend", moduleName = "webapp.backend.tips"}
 ]
 
 [[package]]
 org = "ballerina"
 name = "auth"
-version = "2.11.1"
+version = "2.11.2"
 dependencies = [
 	{org = "ballerina", name = "crypto"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -116,7 +117,7 @@ modules = [
 [[package]]
 org = "ballerina"
 name = "io"
-version = "1.6.0"
+version = "1.6.1"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
