--- a/src/api/Dependencies.toml
+++ b/src/api/Dependencies.toml
@@ -12,6 +12,7 @@ org = "ashen"
 name = "webapp.backend"
 version = "0.1.0"
 dependencies = [
+	{org = "ballerina", name = "cloud"},
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "jballerina.java"},
@@ -57,6 +58,14 @@ dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "task"},
 	{org = "ballerina", name = "time"}
+]
+
+[[package]]
+org = "ballerina"
+name = "cloud"
+version = "3.0.1"
+modules = [
+	{org = "ballerina", packageName = "cloud", moduleName = "cloud"}
 ]
 
 [[package]]
