--- a/src/website/highlights/package.json
+++ b/src/website/highlights/package.json
@@ -17,12 +17,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mantine/charts": "^7.11.1",
-    "@mantine/core": "^7.11.1",
-    "@mantine/dates": "^7.11.1",
-    "@mantine/form": "^7.11.1",
-    "@mantine/hooks": "^7.11.1",
-    "@mantine/notifications": "^7.11.1",
+    "@mantine/charts": "^7.12.2",
+    "@mantine/core": "^7.12.2",
+    "@mantine/dates": "^7.12.2",
+    "@mantine/form": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "@mantine/notifications": "^7.12.2",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.20",
@@ -30,10 +30,10 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.11.0",
     "animate.css": "^4.1.1",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "next": "14.2.3",
+    "next": "^14.2.8",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
@@ -54,7 +54,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-resizable": "^3.0.8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.7",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
